# symbolExec

./: .gitignore  CMakeLists.txt  README.md  easy_demo.cpp  global_demo.cpp  symGlobalDemo  symGlobalDemoDump.txt  symHeapDemo.cpp  symex  symex-x86  symex-x86-stack  symex-x86-stackDump.txt  symex-x86Dump.txt  symex.cpp  symmainStack-args  symmainStack-args-Dump.txt  symmainStack-cin  symmainStack-cin-Dump.txt
CFG/: _Z3fooii.dot  addx_y.dot
libCFG/: CMakeLists.txt
libCFG/include/: asm_block.h  asm_cfg.h  asm_statement.h  edge.h  func.h  libcfg_error.h  libcfg_utils.h  type.h  type_context.h  var.h
libCFG/src/: asm_cfg.cpp  libcfg_utils.cpp
libELF/: CMakeLists.txt
libELF/src/: testELF.cpp
libZ3/: CMakeLists.txt
libZ3/lib/: libz3.lib.win
libZ3/src/: z3Test.cpp
symbolEXEC/: CMakeLists.txt
symbolEXEC/include/: MyRegister.h  MyStack.h  StackElement.h  symbolExecute.h  toolUtil.h
symbolEXEC/src/: symbolExecute.cpp
symex.dSYM/Contents/: Info.plist
symex.dSYM/Contents/Resources/DWARF/: symex
symex.dSYM/Contents/Resources/Relocations/aarch64/: symex.yml
